--- a/gpt_config.yaml
+++ b/gpt_config.yaml
@@ -9,12 +9,12 @@ gpt-4o:
 
 qwen:
   endpoint: https://dashscope.aliyuncs.com/compatible-mode/v1
-  api_key: sk-d201330338764a7fbdc7d106e372e208
+  api_key: your_api_key
   api_version: null
   model_name: qwen-plus
   vlm_model_name: qwen-vl-max
 
 gemini:
   endpoint: https://generativelanguage.googleapis.com/v1beta
-  api_key: AIzaSyDmVIWSlrdfMQUbFuNyLkDrk5evKLBq4-k
+  api_key:your_api_key
   model_name: gemini-2.0-flash-exp
